--- a/warehouse/templates/warehouse/base.html
+++ b/warehouse/templates/warehouse/base.html
@@ -26,6 +26,8 @@
             /
             <a href="{% url 'warehouse:order' %}">{% trans "Сделать покупку" %}</a>
             /
+            <a href="{% url 'warehouse:mptt' %}">{% trans "MPTT" %}</a>
+            /
             <a href="{% url 'admin:index' %}">{% trans "Управление складом" %}</a>
         </div>
     </div>
