--- a/warehouse/templates/warehouse/mptt.html
+++ b/warehouse/templates/warehouse/mptt.html
@@ -11,6 +11,18 @@
 
 {% block content %}
 
-
+{% load mptt_tags %}
+<ul>
+    {% recursetree categories %}
+        <li>
+            {{ node.name }}
+            {% if not node.is_leaf_node %}
+                <ul class="children">
+                    {{ children }}
+                </ul>
+            {% endif %}
+        </li>
+    {% endrecursetree %}
+</ul>
 
 {% endblock content %}
